# django_by_book

./: README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py
blog/models/: __init__.py  comment.py  post.py
blog/templates/: base.html  pagination.html
blog/templates/blog/post/: comment.html  detail.html  draft_list.html  index.html  search.html  share.html
blog/templates/blog/post/includes/: inc_comment_form.html
blog/templatetags/: blog_tags.py
config/: settings.py  urls.py
